nullaway_error_492F4DE2-85FC-468D-8233-4BA2A61AB267.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/server/session/InMemoryWebSessionStore.java:297: error: [NullAway] dereferenced expression this.state.get() is @Nullable
			if (this.state.get().equals(State.EXPIRED)) {
			                    ^
    (see http://t.uber.com/nullaway )
